date & keyword format added

--- a/site/public_html/index.html
+++ b/site/public_html/index.html
@@ -29,8 +29,9 @@ and open the template in the editor.
             <ul>
                 <li><%= title %></li>
                 <li><%= author %></li>
-                <li><%= releaseDate %></li>
-                <li><%= keywords %></li>
+                <li><%= $.format.date( new Date( releaseDate ), 'MMMM yyyy' ) %></li>
+                <li><% _.each( keywords, function( keyobj ) {%> 
+                    <%= keyobj.keyword %><% } ); %></li>
             </ul>
 
             <button class="delete">Delete</button>
@@ -41,6 +42,7 @@ and open the template in the editor.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.9/backbone.localStorage-min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.min.js"></script>
         <!-- Local js files -->
         <script src="js/models/book.js"></script>
         <script src="js/collections/library.js"></script>
